--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="keywords" content="Norouzi, Noroozi, Mohammad, Mohammed, Mohamed, Mohamad, Machine learning, AI">	
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mohammad Norouzi</title>
+  <title>Amin Ullah</title>
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" async="" src="ga.js"></script>
   <script type="text/javascript">
