--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
   <div class="main">
     <div class="flexible">
-      <img src="img/Mohammad_Norouzi.jpg" border="0">
+      <img src="img/picture.jpg" border="0">
     </div>
 
     <h1>Mohammad Norouzi</h1>
