--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <img src="img/picture.jpg" border="0">
     </div>
 
-    <h1>Mohammad Norouzi</h1>
+    <h1>Amin Ullah</h1>
     <p>
       I am a machine learning engineer and innovator. Currently, I am working
       at a new startup called <a href="https://ideogram.ai">Ideogram AI</a>. Our mission is to help people become more creative through Generative AI. We're <a href="https://jobs.ashbyhq.com/ideogram">hiring</a>!
